--- a/kooplexhub/hub/templates/navbarmenu_right.html
+++ b/kooplexhub/hub/templates/navbarmenu_right.html
@@ -14,6 +14,7 @@
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
     {% if user.is_authenticated %}
+      <a class="dropdown-item" href="{% url 'logout' %}">Logout (insecure) <span class="oi oi-account-logout"></span></a>
       <a class="dropdown-item" href="#" data-toggle="modal" data-target="#update-bio">Update bio</a>
       <a class="dropdown-item" href="{% url 'user:managetokens' next_page %}">Manage secrets</a>
       <div class="dropdown-divider"></div>
@@ -24,7 +25,7 @@
   </li>
   <li class="nav-item">
   {% if user.is_authenticated %}
-    <a class="nav-link" href="{% url 'logout' %}">Log off <span class="oi oi-account-logout"></span></a>
+    <a class="nav-link" href="{% url 'do_logout' %}">Log off <span class="oi oi-account-logout"></span></a>
   {% else %}
   <a class="nav-link" href="{% url 'social:begin' 'hydraoidc' %}" style="color: white">Log in <span class="oi oi-account-login"></span></a>
   {% endif %}
