--- a/kooplexhub/hub/templates/footer.html
+++ b/kooplexhub/hub/templates/footer.html
@@ -1,8 +1,17 @@
-<div class="jumbotron bs-docs-footer container body-content" style="font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730; box-shadow: 5px 10px 8px #888888;">
-  <p><span style="color: #f57a7a;">"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a></p>
-  <ul>
-    <li>To report problems or buggy features please file an issue at - <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a></li>
-    <!--li>To check the manual please visit - <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub/wiki</strong></a></li-->
-  </ul>
+<div class="jumbotron bs-docs-footer container body-content" style="position: relative; height: 100px; clear:both;
+	        padding-top:20px;font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730; box-shadow: 5px 10px 8px #888888;">
+	<div class="row">
+             <div class="col-md-10">
+                  <p><span style="color: #f57a7a;">"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a></p>
+                  <ul>
+                    <li>To report problems or buggy features please file an issue at - <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a></li>
+                    <!--li>To check the manual please visit - <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub/wiki</strong></a></li-->
+                  </ul>
+             </div>
+             <div class="col-md-2">
+                 <p>&copy; 2018 - Kooplex Hub</p>
+             </div>
+        </div>
+
 </div>
 
