--- a/kooplexhub/hub/templates/footer.html
+++ b/kooplexhub/hub/templates/footer.html
@@ -1,4 +1,7 @@
-<div class="jumbotron bs-docs-footer container body-content" style="position: relative; height: 100px; clear:both;
+<div class="jumbotron bs-docs-footer container body-content" 
+     style="position: relative; 
+            height: 100px; 
+	    clear:both;
 	        padding-top:20px;font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730; box-shadow: 5px 10px 8px #888888;">
 	<div class="row">
              <div class="col-md-10">
