--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -42,6 +42,7 @@
              <div class="row">
                 <div class="col-10">
                    <strong>Description: </strong>{{ project.description }}<br>
+		    <a href="{% url 'report:list'  %}"> Show reports for this project</a>
                 </div>
                 <div class="col-2">
                  <div style="float: right;">
