--- a/kooplexhub/hub/templates/report/newreport.html
+++ b/kooplexhub/hub/templates/report/newreport.html
@@ -6,7 +6,7 @@
 </div>
 {% endblock %}
 
-{% block content %}
+  {% block main_content_center %}
   <form id="newreportForm" class="form-horizontal form-control" action="{% url 'report:new' %}" method="post">
     {% csrf_token %}
     <table>
@@ -18,6 +18,14 @@
     </div>
   
   </form>
-
 {% endblock %}
+
+  {% block main_content_left %}
+  <ul>
+          <li><span class="badge badge-pill badge-info">HTML</span> - static or interactive </li>
+          <li><span class="badge badge-pill badge-success">NB</span> - notebook</li>
+          <li><span class="badge badge-pill badge-warning">API</span> - a served host application with functional endpoints</li>
+          <li><span class="badge badge-pill badge-primary">BOKEH</span> - bokeh application</li>
+  </ul>
+  {% endblock %}
 
