--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -42,7 +42,11 @@
              <div class="row">
                 <div class="col-10">
                    <strong>Description: </strong>{{ project.description }}<br>
-		    <a href="{% url 'report:list'  %}"> Show reports for this project</a>
+		   <form method="POST" action="{% url 'report:list'  %}">
+	              {% csrf_token %}
+			   <input type="hidden" name="name" value="Data">
+			   <input type="submit" name="barmi" value="Show reports for this project">
+		   </form>
                 </div>
                 <div class="col-2">
                  <div style="float: right;">
