--- a/kooplexhub/hub/templates/menuitem_services.html
+++ b/kooplexhub/hub/templates/menuitem_services.html
@@ -8,6 +8,7 @@
       <a class="dropdown-item" href="{% url 'service:filesync' %}" rel="noreferrer">File synchronization</a>
       <a class="dropdown-item" href="{% url 'service:versioncontrol' %}" rel="noreferrer">Version control</a>
       <hr>
-      <a class="dropdown-item" href="/seafile/" rel="noreferrer">Seafile</a>
+      <a class="dropdown-item" href="/seafile/" rel="noreferrer"><span class="oi oi-external-link" aria-hidden="true"> Seafile</span></a>
     </div>
   </li>
+
