--- a/kooplexhub/hub/templates/report/list.html
+++ b/kooplexhub/hub/templates/report/list.html
@@ -47,12 +47,14 @@
 	{% csrf_token %}
 
         <div  class="alert alert-secondary">
-            <input type="text" name="name" placeholder="name" value="{{ search_name }}">
-            <button type="submit" class="btn btn-primary" name="button" value="search">Search</button>
-            <button type="submit" class="btn btn-primary" name="button" value="showall">Show all</button>
+            <input type="text" name="name" placeholder="name" value="{{ search_name }}" size="28">
 	    <input type="hidden" name="pager" value="{{ pager }}">
 	    <input type="hidden" name="sort" value="{{ sort }}">
 	</div>
+    <div class="modal-footer">
+      <button type="submit" class="btn btn-default" name="button" value="search"> Search</button>
+      <button type="submit" class="btn btn-default" name="button" value="showall">Show all</button>
+    </div>
 
 </form>
 {% endblock %}
