--- a/kooplexhub/hub/templates/report/partial.html
+++ b/kooplexhub/hub/templates/report/partial.html
@@ -1,7 +1,7 @@
 {% load render_table from django_tables2 %}
 <div class="col-md-6" >
   <div class="row" >
-      <div class="report-row" style="border-top: #173651; border-top-style: none; border-top-style: double;">
+      <div class="report-row" style="border-top: #173651; border-top-style: none; border-top-style: double;width: 100%;">
 	  <div style="position: absolute; top: 10px; right: 10px; ">
 		{% if report.reporttype == report.TP_STATIC  %}
 	              <span class="badge badge-pill badge-info" style="min-width: 50px; padding-top: 5px; padding-bottom: 5px;">HTML</span>
