sync_folder added to model

--- a/kooplexhub/hub/templates/service/filesynchronization.html
+++ b/kooplexhub/hub/templates/service/filesynchronization.html
@@ -2,8 +2,13 @@
 
 {% block header_extra %}
 
+{% load staticfiles %}
+
 <!--script src="https://kit.fontawesome.com/27d0a7c7d0.js"></script-->
-<link rel="stylesheet" href="/static/fontawesome-free-5.10.2-web/css/all.css">
+<link rel="stylesheet" href="{% static 'fontawesome-free-5.10.2-web/css/all.css' %}">
+
+<link rel="stylesheet" href="{% static 'css/bootstrap4-toggle.min.css' %}">
+<script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
 
 <style>
 .card-header .btn-vmi.collapsed:before {
