--- a/kooplexhub/hub/templates/footer_right.html
+++ b/kooplexhub/hub/templates/footer_right.html
@@ -1,9 +1,7 @@
-<div class="card" style="margin-top: 100px;"> 
+<div class="card"> 
 	<div class="card-body">
-                  <ul>
-                  <li><span >"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a></li>
-			  <li>To report problems or buggy features please file an issue at <br> <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a></li>
-                  </ul>
+		<p><span >"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a>
+		<p>To report problems or buggy features please file an issue at <br> <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a>
 	<h6 class="card-title"> &copy; 2018 - Kooplex Hub </h6>
         </div>
 
