--- a/kooplexhub/hub/templates/project/conf-environment.html
+++ b/kooplexhub/hub/templates/project/conf-environment.html
@@ -1,3 +1,6 @@
+{% extends "project/configure.html" %}
+
+{% block main_content_center %}
 {% load render_table from django_tables2 %}
 <form id="projectSettingsForm" class="form-horizontal" action="{% url 'project:conf_environment' project.id next_page %}" method="post">
 {% load render_table from django_tables2 %}
@@ -53,4 +56,4 @@
   </div>
 
 </form>
-
+{% endblock %}
