--- a/kooplexhub/hub/templates/project/conf-filesync.html
+++ b/kooplexhub/hub/templates/project/conf-filesync.html
@@ -1,13 +1,29 @@
-{% load render_table from django_tables2 %}
+{% extends "project/configure.html" %}
+
+{% block header_extra %}
+{% load staticfiles %}
+
+<link rel="stylesheet" href="{% static 'css/bootstrap4-toggle.min.css' %}">
+<script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
+{% endblock %}
+
+{% block main_content_left %}
 <form id="projectSettingsForm" class="form-horizontal form-control" action="{% url 'project:conf_filesync' project.id next_page %}" method="post">
   {% csrf_token %}
-  <h5>Connect libraries to projects</h5>
+  <h5>Search library</h5>
   <div  class="alert alert-warning">
     <input type="text" name="library" placeholder="library" value="{{ search_library }}">
     <button type="submit" class="btn btn-primary" name="button" value="search">Search</button>
     <input type="hidden" name="pager" value="{{ pager }}">
     <input type="hidden" name="sort" value="{{ sort }}">
   </div>
+</form>
+{% endblock %}
+
+{% block main_content_center %}
+<form id="projectSettingsForm" class="form-horizontal form-control" action="{% url 'project:conf_filesync' project.id next_page %}" method="post">
+  <h5>Connect libraries to projects</h5>
+  {% csrf_token %}
   {% load render_table from django_tables2 %}
   
   {% render_table t_fsl %}
@@ -18,3 +34,4 @@
   </div>
 
 </form>
+{% endblock %}
