--- a/kooplexhub/hub/templates/usertokens.html
+++ b/kooplexhub/hub/templates/usertokens.html
@@ -26,7 +26,7 @@
   </p>
 <h2> Version control Tokens</h2>
 <ul>
-	<li><a href="https://kooplex-test.elte.hu/manual/ExternalComponents/index.html">How to create token? <span class="oi oi-external-link" aria-hidden="true"></a></li>
+	<li><a href="{{ url_manual }}/ExternalComponents/index.html">How to create token? <span class="oi oi-external-link" aria-hidden="true"></a></li>
 </ul>
     {% render_table t_vctoken %}
   </p>
