--- a/kooplexhub/hub/templates/report/list.html
+++ b/kooplexhub/hub/templates/report/list.html
@@ -70,13 +70,13 @@
 {% block main_content_right %}
 <ul>
 	<li><span class="badge badge-pill badge-info">HTML</span> - static or interactive 
-		<a href="https://kooplex-test.elte.hu/manual/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
+		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
 	<li><span class="badge badge-pill badge-success">NB</span> - notebook
-         	<a href="https://kooplex-test.elte.hu/manual/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
+		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
 	<li><span class="badge badge-pill badge-warning">API</span> - an application with functional endpoints
-         	<a href="https://kooplex-test.elte.hu/manual/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
+		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
 	<li><span class="badge badge-pill badge-primary">BOKEH</span> - bokeh application
-         	<a href="https://kooplex-test.elte.hu/manual/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
+		<a href="{{ url_manual }}/Reports/index.html"><span class="oi oi-external-link" aria-hidden="true"> </span></a> </li>
 </ul>
 {{block.super}}
 {% endblock %}
