added volume creation

--- a/kooplexhub/hub/templates/menuitem_services.html
+++ b/kooplexhub/hub/templates/menuitem_services.html
@@ -8,7 +8,7 @@
       <a class="dropdown-item" href="{% url 'service:filesync' %}" rel="noreferrer">File synchronization</a>
       <a class="dropdown-item" href="{% url 'service:versioncontrol' %}" rel="noreferrer">Version control</a>
       <hr>
-      <a class="dropdown-item" href="/gitea/" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Gitea</span></a>
+      <a class="dropdown-item" href="/gitea/user/oauth2/kooplex-test" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Gitea</span></a>
       <a class="dropdown-item" href="/seafile/" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Seafile</span></a>
     </div>
   </li>
