block fix in html

--- a/kooplexhub/hub/templates/edu/assignment-teacher.html
+++ b/kooplexhub/hub/templates/edu/assignment-teacher.html
@@ -42,7 +42,7 @@
 </nav>
 {% endblock %}
 
-{% block content %}
+{% block main_content_center %}
 <div>
   <div class="content">
     {% if submenu == 'new' %}
