--- a/kooplexhub/hub/templates/manual/compute.html
+++ b/kooplexhub/hub/templates/manual/compute.html
@@ -1,6 +1,6 @@
 {% extends "manual/submenus.html" %}
 
-{% block content %}
+{% block main_content_center %}
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-6">Compute nodes</h1>
