--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -7,7 +7,7 @@
 </div>
 {% endblock %}
 
-{!% block content %}
+{!% block main_content_center %}
 {% block main_content_center %}
 <div class="row">
   <form id="project-manage" class="form-horizontal" action="{% url 'project:showhide' next_page %}" method="post">
