--- a/kooplexhub/hub/templates/edu/assignment-student.html
+++ b/kooplexhub/hub/templates/edu/assignment-student.html
@@ -26,7 +26,7 @@
 </nav>
 {% endblock %}
 
-{% block content %}
+{% block main_content_center %}
 <div>
   <div class="content">
     {% if submenu == 'submit' %}
