--- a/kooplexhub/hub/templates/edu/assignment-submit.html
+++ b/kooplexhub/hub/templates/edu/assignment-submit.html
@@ -14,7 +14,7 @@
 </nav>
 {% endblock %}
 
-{% block content %}
+{% block main_content_center %}
   <form id="assignments-submitform" class="form-horizontal" action="{% url 'education:submitassignment' course.id %}" method="post">
     {% csrf_token %}
     <div class="modal-body">
