--- a/kooplexhub/hub/templates/edu/assignments.html
+++ b/kooplexhub/hub/templates/edu/assignments.html
@@ -39,7 +39,7 @@
 </nav>
 {% endblock %}
 
-{% block content %}
+{% block main_content_center %}
 <div>
   <div class="content">
     {% if submenu == 'new' %}
