--- a/kooplexhub/hub/templates/edu/teaching.html
+++ b/kooplexhub/hub/templates/edu/teaching.html
@@ -6,7 +6,7 @@
 </div>
 {% endblock %}
 
-{% block content %}
+{% block main_content_center %}
 
   {% for course in user.profile.courses_taught %}
      {% include 'edu/partial.html' with container=course|get_usercoursecontainer:user url_assignment="education:newassignment" tooltip="You can create and manage assignments." enable_conf=1 %}
